# 05-dev-bigdaddy

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json
myapp/: settings.py
