[tool.poetry]
name = "dj-oscar-svelte-cf-psql-poetry"
version = "0.1.0"
description = ""
authors = ["Chef <cheftech@patraldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-oscar = "^3.2.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
